--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
  <section class="hr-infrastructure">
   <div class="container">
     <div class="chain-narrative">
-      <h2 class="narrative-heading">Engineering an Integrated Infrastructure for Organizational Performance</h2>
-      <p class="punchy-subline">We align HR systems, evidence-based mental wellness, and optimized workplace environments into one intelligent ecosystem — delivering measurable performance outcomes as organizations scale.</p>
+      <h2 class="narrative-heading">Engineering Human Capital Infrastructure for Scalable Performance</h2>
+      <p class="punchy-subline"> We integrate strategic HR consulting, evidence-based mental wellness, and optimized workplace environments into one intelligent system — enabling measurable performance as organizations scale. </p>
       
       <div class="logic-chain">
         <div class="chain-item">
@@ -88,12 +88,12 @@
         <div class="chain-arrow">→</div>
         <div class="chain-item">
           <span class="chain-icon">🧠</span>
-          <p><strong>People:</strong> Strengthening workforce resilience through clinically grounded, data-driven mental wellness.</p>
+          <p><strong>People:</strong> Building workforce resilience through clinically grounded, data-driven mental wellbeing.</p>
         </div>
         <div class="chain-arrow">→</div>
         <div class="chain-item">
           <span class="chain-icon">🌬️</span>
-          <p><strong>Environment:</strong> Optimizing workplace conditions to sharpen focus and cognitive efficiency.</p>
+          <p><strong>Environment:</strong> Optimizing workplace conditions to enhance focus, cognitive performance, and sustained productivity.</p>
         </div>
       </div>
     </div>
@@ -102,35 +102,36 @@
       <div class="infra-card highlight-navy">
         <span class="v-tag">V1</span>
         <h3>Lakeside Human Capital</h3>
-        <p class="punchline">Re-engineering HR Into a Growth Engine</p>
-        <p class="description">We replace fragmented HR functions with scalable infrastructure that supports expansion. From strategic leadership to intelligent talent systems, we turn people operations into a sustainable competitive advantage.</p>
+        <p class="punchline">Strategic HR Architecture & Leadership</p>
+        <p class="description">We re-engineer HR into a scalable growth engine. From fractional CHRO leadership to intelligent HR system design, we transform fragmented people operations into structured, performance-driven infrastructure.</p>
         <ul class="mini-list">
           <li>Fractional CHRO Leadership</li>
           <li>Intelligent HR Architecture</li>
+          <li>Scalable People Systems</li>
         </ul>
       </div>
 
       <div class="infra-card">
         <span class="v-tag">V2</span>
         <h3>Lakeside Health</h3>
-        <p class="punchline">Turning Mental Wellness Into Workforce Resilience</p>
-        <p class="description">We apply clinical science to strengthen psychological resilience and sustain high-functioning teams. Our evidence-based frameworks translate wellbeing into durable capability.</p>
+        <p class="punchline">Clinical Wellbeing for Workforce Resilience</p>
+        <p class="description">We apply clinical science to strengthen psychological resilience and sustain high-functioning teams. Our evidence-based frameworks translate mental wellbeing into durable organizational capability.</p>
         <a href="https://health.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside Health →</a>
       </div>
 
       <div class="infra-card">
         <span class="v-tag">V3</span>
         <h3>Lakeside Happiness</h3>
-        <p class="punchline">Decoding Culture Through Behavioral Intelligence</p>
-        <p class="description">We uncover the hidden dynamics shaping engagement and collaboration. Our psychometric diagnostics deliver insights leaders can act on with precision.</p>
+        <p class="punchline">Behavioral Intelligence for Culture Performance</p>
+        <p class="description">Advanced psychometric diagnostics uncover hidden engagement risks and cultural friction points — delivering actionable insights leaders can act on with precision.</p>
         <a href="https://happiness.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside Happiness →</a>
       </div>
 
       <div class="infra-card">
         <span class="v-tag">V4</span>
         <h3>Lakeside BreathEasier</h3>
-        <p class="punchline">Engineering Air for Cognitive Advantage</p>
-        <p class="description">We design environments that sharpen focus and mental clarity. Because high-performing teams require spaces built for the brain.</p>
+        <p class="punchline">Cognitive Environment Optimization</p>
+        <p class="description">We engineer indoor environments that enhance focus, mental clarity, and cognitive performance — because high-performing teams require spaces built for the brain.</p>
         <a href="https://breatheeasier.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside BreathEasier →</a>
       </div>
     </div>
