--- a/index.html
+++ b/index.html
@@ -139,33 +139,33 @@
 </section>
 
   
-<!------------ Growth Dilemma for SMEs -------------->
+<!------------ Growth Dilemma  -------------->
 
 <section class="growth-dilemma">
   <div class="container">
-     <h2 class="section-title">The Growth Dilemma for SMEs</h2>
+     <h2 class="section-title">The Growth Dilemma for Scaling Organizations</h2>
     <p class="section-subtitle">As your organization scales, the challenges move from siloed tasks to systemic infrastructure needs. Is your foundation ready?</p>
 
     <div class="growth-cards">
       <div class="card">
         <div class="card-icon">⚖️</div>
         <h3>The Compliance & Risk Trap</h3>
-        <p><strong>The Problem:</strong> 60% of SMEs in India & the GCC struggle with shifting labor laws, leading to financial and legal vulnerability.</p>
-        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> Our Virtual CHRO pillar automates this infrastructure so you can focus on growth instead of firefighting.</p>
+        <p><strong>The Problem:</strong> Rapid growth often outpaces regulatory readiness. Shifting labor laws across India and the GCC create financial, legal, and reputational exposure.</p>
+        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> Through our Virtual CHRO leadership, we build compliance-driven HR infrastructure — ensuring governance, risk mitigation, and growth readiness as you scale.</p>
       </div>
 
       <div class="card">
         <div class="card-icon">🚀</div>
         <h3>The Talent War with Giants</h3>
-        <p><strong>The Problem:</strong> SMEs lose top-tier talent due to slow hiring cycles and a lack of data-driven career paths.</p>
-        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> We deploy a "People OS" that reduces Time-to-Hire by 40%, giving you the agility of a startup with the sophistication of a Fortune 500 company.</p>
+        <p><strong>The Problem:</strong> Growing organizations struggle to compete for top-tier talent due to slow hiring systems, unclear career pathways, and fragmented workforce strategy.</p>
+        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> We deploy a "People OS" that reduces Time-to-Hire by 40%, strengthens leadership pipelines, and aligns workforce planning with business strategy.</p>
       </div>
 
       <div class="card highlight-card">
         <div class="card-icon">🧠</div>
         <h3>The Productivity & Burnout Ceiling</h3>
-        <p><strong>The Problem:</strong> Hidden stressors—from poor mental wellness to "CO2 Cliffs"—quietly degrade your team’s focus and executive function.</p>
-        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> We optimize the "Biological Hardware" through BreathEasier and ensure a thriving culture with Lakeside Happiness.</p>
+        <p><strong>The Problem:</strong> Hidden stressors — from mental fatigue to environmental factors like CO₂ exposure — silently erode focus, decision-making quality, and executive function.</p>
+        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> We strengthen organizational “biological infrastructure” through clinical wellbeing frameworks and cognitive environment optimization — ensuring sustained performance.</p>
       </div>
     </div>
   </div>
