--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <div class="container">
     <div class="chain-narrative">
       <h2 class="narrative-heading">Engineering Human Capital Infrastructure for Scalable Growth</h2>
-      <p class="punchy-subline"> We integrate strategic HR consulting, evidence-based mental wellness, and optimized workplace environments into one intelligent system — enabling measurable performance as organizations scale. </p>
+      <p class="punchy-subline"> We integrate strategic HR consulting, evidence-based mental wellness, and optimized workplace environments into one intelligent system — enabling measurable performance and sustainable growth as organizations scale. </p>
       
       <div class="logic-chain">
         <div class="chain-item">
