--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="chain-arrow">→</div>
         <div class="chain-item">
           <span class="chain-icon">🌬️</span>
-          <p><strong>Environment:</strong> Optimizing workplace conditions to enhance focus, cognitive performance, and sustained productivity.</p>
+          <p><strong>Environment:</strong> Optimizing workplace conditions to enhance focus, cognitive performance, and long-term productivity.</p>
         </div>
       </div>
     </div>
@@ -103,7 +103,7 @@
         <span class="v-tag">V1</span>
         <h3>Lakeside Human Capital</h3>
         <p class="punchline">Strategic HR Architecture & Leadership</p>
-        <p class="description">We re-engineer HR into a scalable growth engine. From fractional CHRO leadership to intelligent HR system design, we transform fragmented people operations into structured, performance-driven infrastructure.</p>
+        <p class="description">We re-engineer HR into a scalable growth engine. From fractional CHRO leadership to intelligent HR system architecture, we transform fragmented people operations into structured, performance-driven infrastructure.</p>
         <ul class="mini-list">
           <li>Fractional CHRO Leadership</li>
           <li>Intelligent HR Architecture</li>
@@ -115,7 +115,7 @@
         <span class="v-tag">V2</span>
         <h3>Lakeside Health</h3>
         <p class="punchline">Clinical Wellbeing for Workforce Resilience</p>
-        <p class="description">We apply clinical science to strengthen psychological resilience and sustain high-functioning teams. Our evidence-based frameworks translate mental wellbeing into durable organizational capability.</p>
+        <p class="description">We apply clinical science to strengthen psychological resilience and sustain high-functioning teams. Our evidence-based frameworks translate mental wellbeing into measurable organizational capability.</p>
         <a href="https://health.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside Health →</a>
       </div>
 
@@ -123,7 +123,7 @@
         <span class="v-tag">V3</span>
         <h3>Lakeside Happiness</h3>
         <p class="punchline">Behavioral Intelligence for Culture Performance</p>
-        <p class="description">Advanced psychometric diagnostics uncover hidden engagement risks and cultural friction points — delivering actionable insights leaders can act on with precision.</p>
+        <p class="description">Advanced psychometric diagnostics uncover hidden engagement risks and cultural friction points — delivering actionable insights for precise leadership decisions.</p>
         <a href="https://happiness.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside Happiness →</a>
       </div>
 
@@ -131,7 +131,7 @@
         <span class="v-tag">V4</span>
         <h3>Lakeside BreathEasier</h3>
         <p class="punchline">Cognitive Environment Optimization</p>
-        <p class="description">We engineer indoor environments that enhance focus, mental clarity, and cognitive performance — because high-performing teams require spaces built for the brain.</p>
+        <p class="description">We engineer indoor environments that enhance focus, mental clarity, and cognitive performance — because high-performing teams require spaces designed for the brain.</p>
         <a href="https://breatheeasier.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside BreathEasier →</a>
       </div>
     </div>
