--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
       </div>
     </div>
 
+    <div class="capabilities-transition">
+  <p>
+    This integrated approach is delivered through our 
+    <strong>four specialized capabilities:</strong>
+  </p>
+</div>
+
     <div class="infrastructure-row">
       <div class="infra-card highlight-navy">
         <span class="v-tag">V1</span>
