--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   <section class="institutional-impact">
   <div class="container">
     <h2 class="section-title">Institutional Impact</h2>
-    <p class="section-subtitle">Proven stability across high-stakes environments, from tier-1 infrastructure to global hospitality.</p>
+    <p class="section-subtitle">Proven impact across high-stakes, enterprise environments — from Tier-1 infrastructure and BFSI to global aviation and hospitality.</p>
     
     <div class="impact-table-container">
       <table class="impact-table">
@@ -197,22 +197,23 @@
         <tbody>
           <tr>
             <td><strong>Energy & Telecom Conglomerates</strong></td>
-            <td>Enterprise-wide mental health restructuring and leadership development for <strong>10,000+ employees</strong>.</td>
+            <td>nterprise-wide mental health transformation and leadership architecture across <strong>10,000+ employees</strong>.</td>
           </tr>
           <tr>
             <td><strong>Global Aviation & Luxury Hospitality</strong></td>
-            <td>Crisis management and high-stress resilience training for frontline staff.</td>
+            <td>Crisis leadership frameworks and high-stress resilience architecture for frontline operations.</td>
           </tr>
           <tr>
             <td><strong>Tier-1 Infrastructure & BFSI</strong></td>
-            <td>Digital transformation of HR workflows and cognitive workspace auditing.</td>
+            <td>Digital HR transformation and cognitive infrastructure auditing for operational excellence.</td>
           </tr>
         </tbody>
       </table>
     </div>
     
     <div class="impact-cta">
-      <p>Is your infrastructure ready for scale? We invite you to experience the Lakeside difference.</p>
+      <p>Is your human capital infrastructure built for the next phase of scale?</p>
+      <p>Experience the Lakeside difference.</p>
       <a href="https://forms.gle/rsZpRCJudDQxaKkz8" class="btn-secondary">Request a Complimentary Cognitive Audit</a>
     </div>
   </div>
