--- a/index.html
+++ b/index.html
@@ -227,23 +227,21 @@
   <div class="container">
     <div class="approach-wrapper">
       <div class="approach-text">
-        <h2>A Smarter Approach to Human Capital</h2>
+        <h2>The Lakeside Systems Approach</h2>
         <p class="approach-lead">
-          You don’t need an enterprise-sized budget to have world-class HR infrastructure. 
+          World-class HR infrastructure should be structured, scalable, and accessible — not reactive and fragmented. 
         </p>
         <p>
-          We founded Lakeside Asia on a simple belief: the right blend of human expertise and 
-          intelligent technology makes strategic HR accessible. We provide the clarity of a 
-          seasoned Virtual CHRO and the efficiency of a modern tech stack, all in one seamless service.
+          Lakeside Human Capital was built on a simple principle: effective HR is not a function — it is infrastructure.
+          We combine seasoned Fractional CHRO leadership with intelligent technology frameworks to design scalable people systems that support sustained growth.
         </p>
         <p>
-          By integrating IIT-level technical architecture with TISS-level clinical rigor, 
-          we solve complex people operations through a systems-engineering lens.
+By integrating IIT-level systems thinking with TISS-level clinical rigor, we approach human capital through an engineering lens — solving complex people challenges with structured precision.
         </p>
         <div class="dna-badges">
-          <span class="dna-badge">IIT Systems Thinking</span>
-          <span class="dna-badge">TISS Clinical Rigor</span>
-          <span class="dna-badge">Fortune 500 Execution</span>
+          <span class="dna-badge">IIT-Level Systems Thinking</span>
+          <span class="dna-badge">TISS-Level Clinical Rigor</span>
+          <span class="dna-badge">Fortune 500-Grade Execution</span>
         </div>
       </div>
       <div class="approach-image">
