--- a/index.html
+++ b/index.html
@@ -254,32 +254,32 @@ By integrating IIT-level systems thinking with TISS-level clinical rigor, we app
 <!-- ================= OUR SERVICES SECTION ================= -->
 <section class="specialized-services">
   <div class="container">
-    <h2 class="section-title">Specialized Solutions for Targeted Impact</h2>
-    <p class="section-subtitle">While our Ecosystem provides holistic health, we also offer deep-dive expertise for specific organizational needs.</p>
+    <h2 class="section-title">Hands-On HR Leadership for Growing Businesses</h2>
+    <p class="section-subtitle">Not every organization is ready for a full-time CHRO — but every growing business needs structured HR leadership. Here’s how we step in as your strategic HR partner:</p>
 
     <div class="services-grid">
       <div class="service-pill">
         <img src="assets/images/talent.png" alt="Talent Acquisition">
-        <h3>Talent Acquisition</h3>
-        <p>AI-powered sourcing and systems engineering to build a high-velocity, data-driven talent pipeline.</p>
+        <h3>Talent & Hiring Systems</h3>
+        <p>We design practical, scalable hiring processes — from job architecture to structured interviews — so you attract and retain the right talent as you grow.</p>
       </div>
 
       <div class="service-pill highlight-pill">
-        <img src="assets/images/wellbeing1.png" alt="Mental Wellness">
-        <h3>Employee Mental Wellness</h3>
-        <p>Clinical-standard counseling and wellness roadmaps designed to reduce burnout and enhance cognitive performance.</p>
+        <img src="assets/images/wellbeing1.png" alt="Compliance & HR Foundations">
+        <h3>Compliance & HR Foundations</h3>
+        <p>We set up policies, contracts, payroll frameworks, and regulatory compliance aligned to India and GCC standards — reducing legal risk from day one.</p>
       </div>
 
       <div class="service-pill">
-        <img src="assets/images/EE.png" alt="Psychometrics">
-        <h3>Psychometric Assessment</h3>
-        <p>Certified diagnostics utilizing the PERMA framework to identify cultural fit and leadership potential.</p>
+        <img src="assets/images/EE.png" alt="Performance & Culture Systems">
+        <h3>Performance & Culture Systems</h3>
+        <p>We implement clear performance frameworks, goal alignment systems, and leadership development structures to prevent chaos as teams expand.</p>
       </div>
 
       <div class="service-pill">
-        <img src="assets/images/compliance.png" alt="Compliance">
-        <h3>HR Compliance & Payroll</h3>
-        <p>Eliminate legal risk with expert-led onboarding and policy frameworks specifically for India & the GCC.</p>
+        <img src="assets/images/compliance.png" alt="Employee Wellbeing & Engagement">
+        <h3>Employee Wellbeing & Engagement</h3>
+        <p>As your organization matures, we introduce evidence-based engagement diagnostics and resilience frameworks to sustain performance.</p>
       </div>
     </div>
   </div>
