--- a/index.html
+++ b/index.html
@@ -290,8 +290,10 @@ By integrating IIT-level systems thinking with TISS-level clinical rigor, we app
   
 <section class="four-step-path">
   <div class="container">
-    <h2 class="section-title">Our 4-Step Path to HR Excellence</h2>
-    <p class="section-subtitle">A transparent, structured process designed to deliver measurable results and sustainable transformation.</p>
+    <h2 class="section-title">Our 4-Step Human Capital Framework</h2>
+    <p class="section-subtitle">A structured, transparent methodology designed to deliver measurable results and sustainable organizational transformation.</p>
+
+    <p>Whether you're building your first HR foundation or optimizing enterprise infrastructure, our approach remains structured and outcome-driven.</p
 
     <div class="steps-grid">
       <div class="step-card">
@@ -301,7 +303,7 @@ By integrating IIT-level systems thinking with TISS-level clinical rigor, we app
         <div class="step-content">
           <span class="step-number">01</span>
           <h3>Discover & Audit</h3>
-          <p>We perform a deep-dive clinical and operational audit into your current processes, identify cultural fracture points, and map your business goals.</p>
+          <p>We conduct a comprehensive operational and cultural audit — identifying structural gaps, cultural friction points, and alignment opportunities tied to your business goals.</p>
         </div>
       </div>
 
@@ -312,7 +314,7 @@ By integrating IIT-level systems thinking with TISS-level clinical rigor, we app
         <div class="step-content">
           <span class="step-number">02</span>
           <h3>Infrastructure Design</h3>
-          <p>Leveraging IIT-level systems thinking, we select and implement the right-fit HR technology to automate workflows and eliminate administrative overhead.</p>
+          <p>Applying systems-engineering principles, we design scalable HR architecture — selecting the right frameworks, workflows, and technologies to eliminate inefficiencies and build growth-ready infrastructure.</p>
         </div>
       </div>
 
@@ -323,7 +325,7 @@ By integrating IIT-level systems thinking with TISS-level clinical rigor, we app
         <div class="step-content">
           <span class="step-number">03</span>
           <h3>Strategic Rollout</h3>
-          <p>We deploy new policies and well-being frameworks with expert change management, ensuring the new "People OS" is adopted across the organization.</p>
+          <p>We implement structured policies, governance models, and people frameworks with expert change management — ensuring adoption across teams and leadership levels.</p>
         </div>
       </div>
 
@@ -334,7 +336,7 @@ By integrating IIT-level systems thinking with TISS-level clinical rigor, we app
         <div class="step-content">
           <span class="step-number">04</span>
           <h3>Measure & Optimize</h3>
-          <p>Using our "CFO-Ready" dashboards, we provide ongoing data analysis and clinical governance to ensure continuous improvement and P&L impact.</p>
+          <p>Through CFO-ready dashboards and performance analytics, we provide continuous oversight, governance, and data-backed optimization — ensuring measurable P&L impact.</p>
         </div>
       </div>
     </div>
