--- a/index.html
+++ b/index.html
@@ -352,14 +352,14 @@ By integrating IIT-level systems thinking with TISS-level clinical rigor, we app
   <div class="container">
     <div class="advantage-wrapper">
       <div class="advantage-text">
-        <h2 class="section-title">The Lakeside Advantage</h2>
+        <h2 class="section-title">Why Lakeside Is Different</h2>
         <p class="lead-text">Engineering organizational resilience through a unique multidisciplinary lens.</p>
         
         <div class="advantage-item">
           <span class="check-icon">✔</span>
           <div class="item-content">
             <h3>Systems Engineering x Clinical Psychology</h3>
-            <p>We don't just "do HR." We apply IIT-level systems architecture to your infrastructure and TISS-level clinical rigor to your people.</p>
+            <p>We don’t operate as a traditional HR consultancy. We integrate systems engineering principles with clinical psychology frameworks to design resilient, performance-driven people infrastructure.</p>
           </div>
         </div>
 
@@ -367,7 +367,7 @@ By integrating IIT-level systems thinking with TISS-level clinical rigor, we app
           <span class="check-icon">✔</span>
           <div class="item-content">
             <h3>Measurable P&L Impact</h3>
-            <p>Our "CFO-Ready" dashboards move beyond soft metrics to show a 40% reduction in Time-to-Hire and measurable ROI on wellness.</p>
+            <p>Our CFO-ready dashboards move beyond engagement metrics — delivering measurable reductions in Time-to-Hire and quantifiable ROI on workforce investment.</p>
           </div>
         </div>
 
@@ -375,7 +375,7 @@ By integrating IIT-level systems thinking with TISS-level clinical rigor, we app
           <span class="check-icon">✔</span>
           <div class="item-content">
             <h3>Regional Mastery (India & GCC)</h3>
-            <p>Deep expertise in navigating the complex compliance, labor laws, and talent landscapes of both the Indian and Middle Eastern markets.</p>
+            <p>Deep regulatory, cultural, and workforce expertise across India and the GCC — enabling compliant, scalable expansion across both markets.</p>
           </div>
         </div>
       </div>
