--- a/index.html
+++ b/index.html
@@ -401,8 +401,8 @@ By integrating IIT-level systems thinking with TISS-level clinical rigor, we app
 
  <section id="about" class="founders-section">
   <div class="container">
-    <h2 class="section-title">The Multidisciplinary DNA</h2>
-    <p class="section-subtitle">A unique partnership bridging enterprise technology and clinical psychology with strategic HR and psychometric diagnostics.</p>
+    <h2 class="section-title">The Leadership Behind Lakeside</h2>
+    <p class="section-subtitle">A unique partnership combining enterprise systems thinking, clinical psychology, and strategic HR leadership.</p>
 
     <div class="founders-grid">
       <div class="founder-card">
@@ -411,8 +411,8 @@ By integrating IIT-level systems thinking with TISS-level clinical rigor, we app
         </div>
         <div class="founder-info">
           <h3>Rohit Nalwade</h3>
-          <span class="founder-role">Co-Founder | Systems Architect & Psychologist</span>
-          <p>The bridge between **IIT-level systems thinking** and TISS-level clinical rigor. With 20+ years in enterprise technology and a deep foundation in psychology, Rohit designs the "Biological Hardware" and cognitive frameworks that ensure organizations are both scalable and mentally resilient.</p>
+          <span class="founder-role">Founder | Systems Architect & Psychologist</span>
+          <p>Rohit bridges enterprise-grade systems engineering with clinical rigor. With over 20 years of experience in technology transformation and applied psychology, he designs scalable human capital frameworks that align operational performance with cognitive resilience.</p>
         </div>
       </div>
 
@@ -423,7 +423,7 @@ By integrating IIT-level systems thinking with TISS-level clinical rigor, we app
         <div class="founder-info">
           <h3>Sweety Vasani</h3>
           <span class="founder-role">Co-Founder | HR Strategist & Psychometric Assessor</span>
-          <p>The driving force behind "Soul-Ready" cultures. A seasoned HR leader, counselor, and Certified Psychometric Assessor, Sweety translates complex human data into people-first strategies. She ensures that employee well-being and organizational health are treated as two sides of the same coin.</p>
+          <p>Sweety brings deep expertise in strategic HR leadership and behavioral diagnostics. A certified psychometric assessor and seasoned HR practitioner, she translates workforce data into actionable people strategies — ensuring employee wellbeing and organizational performance move in tandem.</p>
         </div>
       </div>
     </div>
