--- a/index.html
+++ b/index.html
@@ -425,6 +425,9 @@ By integrating IIT-level systems thinking with TISS-level clinical rigor, we app
           <span class="founder-role">Co-Founder | HR Strategist & Psychometric Assessor</span>
           <p>Sweety brings deep expertise in strategic HR leadership and behavioral diagnostics. A certified psychometric assessor and seasoned HR practitioner, she translates workforce data into actionable people strategies — ensuring employee wellbeing and organizational performance move in tandem.</p>
         </div>
+
+        <p>Together, they bring a rare blend of systems engineering and clinical science to the design of high-performance organizations.</p>
+        
       </div>
     </div>
   </div>
