--- a/index.html
+++ b/index.html
@@ -437,18 +437,17 @@ By integrating IIT-level systems thinking with TISS-level clinical rigor, we app
   <!-- ================== HR HEALTH CHECK CTA SECTION ================== -->
 <section id="hr-health-check" class="cta-section">
   <div class="cta-container">
-    <h2>Ready to Build a Future-Proof Workforce?</h2>
+    <h2>Ready to Build HR Infrastructure That Scales?</h2>
     <p>
-      Let's start with a conversation. In a complimentary 30-minute HR Health Check, 
-      we'll analyze your current processes and provide immediate, actionable insights 
-      you can use to improve your business. No obligation, just value.
+      Start with a focused 30-minute HR Strategy Session. We assess your current people systems, identify structural gaps, and outline clear next steps — tailored to your stage of growth.
+No obligation. Just strategic clarity.
     </p>
     <div class="cta-buttons">
       <a href="https://calendly.com/sweetyvasani/30min" target="_blank" class="btn-primary">
-        Book a Free 30-mins Consultation
+        Book a 30-Min Strategy Call
       </a>
     <a href="https://forms.gle/rsZpRCJudDQxaKkz8" target="_blank" class="btn-secondary">
-      Book My Free HR Health Check Now
+      Book Your Free HR Health Check
     </a>
   </div>
     </div>
