--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  <!-- Header -->
 <header>
   <a href="index.html" class="brand">
-    <img src="assets/Lakeside Human Capital Logo.png" alt="Lakeside Human Capital Logo" class="logo-img" />
+    <img src="assets/images/Lakeside Human Capital Logo.png" alt="Lakeside Human Capital Logo" class="logo-img" />
     <span class="brand-name">
       <strong class="brand-bold">LAKESIDE HUMAN CAPITAL</strong> 
     </span>
@@ -59,12 +59,12 @@
   </nav>
   
 <!-- Hero -->
-  
 <section id="home" class="hero">
   <div class="hero-content">
     <h1>Is Your HR Ready for the Next Phase of Growth?</h1>
     <br class="heading-break" aria-hidden="true" />
-    <p>Stop firefighting and start building a strategic workforce. Lakeside Human Capital delivers enterprise-grade HR consulting powered by real-time people analytics and integrated wellbeing systems, turning people operations into a measurable competitive advantage.</p>
+    <p>Stop firefighting and start building a strategic workforce. 
+      Lakeside Human Capital delivers enterprise-grade HR consulting powered by real-time people analytics and integrated wellbeing systems, turning people operations into a measurable competitive advantage.</p>
     <br class="heading-break" aria-hidden="true" />
     <a href="https://calendly.com/sweetyvasani/30min" target="_blank" class="btn-primary">Book a Free 30-mins Strategy Call</a>
     <a href="https://forms.gle/rsZpRCJudDQxaKkz8" target="_blank" class="btn-secondary">Get Your Free HR Health Check</a>
