--- a/index.html
+++ b/index.html
@@ -104,44 +104,56 @@
     <strong>four specialized capabilities:</strong>
   </p>
 </div>
+<div class="capability-split">
 
-    <div class="infrastructure-row">
-      <div class="infra-card highlight-navy">
-        <span class="v-tag">V1</span>
-        <h3>Lakeside Human Capital</h3>
-        <p class="punchline">Strategic HR Architecture & Leadership</p>
-        <p class="description">We re-engineer HR into a scalable growth engine. From fractional CHRO leadership to intelligent HR system architecture, we transform fragmented people operations into structured, performance-driven infrastructure.</p>
-        <ul class="mini-list">
-          <li>Fractional CHRO Leadership</li>
-          <li>Intelligent HR Architecture</li>
-          <li>Scalable People Systems</li>
-        </ul>
-      </div>
+  <div class="capability-container">
 
-      <div class="infra-card">
-        <span class="v-tag">V2</span>
-        <h3>Lakeside Health</h3>
-        <p class="punchline">Clinical Wellbeing for Workforce Resilience</p>
-        <p class="description">We apply clinical science to strengthen psychological resilience and sustain high-functioning teams. Our evidence-based frameworks translate mental wellbeing into measurable organizational capability.</p>
-        <a href="https://health.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside Health →</a>
-      </div>
+    <!-- LEFT SIDE -->
+    <div class="capability-primary">
+      <span class="cap-tag">V1</span>
+      <h3>Lakeside Human Capital</h3>
+      <p class="cap-subtitle">Strategic HR Architecture & Leadership</p>
 
-      <div class="infra-card">
-        <span class="v-tag">V3</span>
-        <h3>Lakeside Happiness</h3>
-        <p class="punchline">Behavioral Intelligence for Culture Performance</p>
-        <p class="description">Advanced psychometric diagnostics uncover hidden engagement risks and cultural friction points — delivering actionable insights for precise leadership decisions.</p>
-        <a href="https://happiness.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside Happiness →</a>
-      </div>
+      <p class="cap-description">
+        We re-engineer HR into a scalable growth engine. From fractional CHRO leadership to intelligent HR system architecture, we transform fragmented people operations into structured, performance-driven infrastructure.
+      </p>
 
-      <div class="infra-card">
-        <span class="v-tag">V4</span>
-        <h3>Lakeside BreathEasier</h3>
-        <p class="punchline">Cognitive Environment Optimization</p>
-        <p class="description">We engineer indoor environments that enhance focus, mental clarity, and cognitive performance — because high-performing teams require spaces designed for the brain.</p>
-        <a href="https://breatheeasier.lakesideasia.com" class="infra-link" target="_blank">Explore Lakeside BreathEasier →</a>
-      </div>
+      <ul class="cap-list">
+        <li>Fractional CHRO Leadership</li>
+        <li>Intelligent HR Architecture</li>
+        <li>Scalable People Systems</li>
+      </ul>
     </div>
+
+    <!-- RIGHT SIDE -->
+    <div class="capability-secondary">
+
+      <div class="cap-secondary-item">
+        <h4>Lakeside Health</h4>
+        <p>Clinical wellbeing frameworks that strengthen workforce resilience and translate mental wellness into measurable organizational capability.</p>
+        <a href="https://health.lakesideasia.com" target="_blank">Explore →</a>
+      </div>
+
+      <div class="cap-secondary-item">
+        <h4>Lakeside Happiness</h4>
+        <p>Advanced behavioral diagnostics uncover engagement risks and cultural friction — delivering precise leadership insights.</p>
+        <a href="https://happiness.lakesideasia.com" target="_blank">Explore →</a>
+      </div>
+
+      <div class="cap-secondary-item">
+        <h4>Lakeside BreathEasier</h4>
+        <p>Cognitive environment optimization that enhances focus, clarity, and performance across high-functioning teams.</p>
+        <a href="https://breatheeasier.lakesideasia.com" target="_blank">Explore →</a>
+      </div>
+
+    </div>
+
+  </div>
+
+</div>
+
+    
+
   </div>
 </section>
 
