--- a/index.html
+++ b/index.html
@@ -83,17 +83,22 @@
       <div class="logic-chain">
         <div class="chain-item">
           <span class="chain-icon">🏗️</span>
-          <p><strong>Organization:</strong> Designing scalable HR architectures that eliminate structural bottlenecks and unlock growth.</p>
+           <strong class="chain-title">Organization</strong>
+          <p class="chain-text">
+    Designing scalable HR architectures that eliminate structural bottlenecks and unlock growth.
+  </p>
         </div>
         <div class="chain-arrow">→</div>
         <div class="chain-item">
           <span class="chain-icon">🧠</span>
-          <p><strong>People:</strong> Building workforce resilience through clinically grounded, data-driven mental wellbeing.</p>
+          <strong class="chain-title">People</strong>
+          <p class="chain-text"> Building workforce resilience through clinically grounded, data-driven mental wellbeing.</p>
         </div>
         <div class="chain-arrow">→</div>
         <div class="chain-item">
           <span class="chain-icon">🌬️</span>
-          <p><strong>Environment:</strong> Optimizing workplace conditions to enhance focus, cognitive performance, and long-term productivity.</p>
+          <strong class="chain-title">Environment</strong>
+          <p class="chain-text">  Optimizing workplace conditions to enhance focus, cognitive performance, and long-term productivity.</p>
         </div>
       </div>
     </div>
