--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
 
     <!-- LEFT SIDE -->
     <div class="capability-primary">
-      <span class="cap-tag">V1</span>
-      <h3>Lakeside Human Capital</h3>
+      <h3>1.   Lakeside Human Capital</h3>
       <p class="cap-subtitle">Strategic HR Architecture & Leadership</p>
 
       <p class="cap-description">
@@ -134,19 +133,19 @@
     <div class="capability-secondary">
 
       <div class="cap-secondary-item">
-        <h4>Lakeside Health</h4>
+        <h4>2.   Lakeside Health</h4>
         <p>Clinical wellbeing frameworks that strengthen workforce resilience and translate mental wellness into measurable organizational capability.</p>
         <a href="https://health.lakesideasia.com" target="_blank">Explore →</a>
       </div>
 
       <div class="cap-secondary-item">
-        <h4>Lakeside Happiness</h4>
+        <h4>3.   Lakeside Happiness</h4>
         <p>Advanced behavioral diagnostics uncover engagement risks and cultural friction — delivering precise leadership insights.</p>
         <a href="https://happiness.lakesideasia.com" target="_blank">Explore →</a>
       </div>
 
       <div class="cap-secondary-item">
-        <h4>Lakeside BreathEasier</h4>
+        <h4>4.   Lakeside BreathEasier</h4>
         <p>Cognitive environment optimization that enhances focus, clarity, and performance across high-functioning teams.</p>
         <a href="https://breatheeasier.lakesideasia.com" target="_blank">Explore →</a>
       </div>
