--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <!-- LEFT SIDE -->
     <div class="capability-primary">
-      <h3>1.   Lakeside Human Capital</h3>
+      <h3><span class="cap-number">01</span> Lakeside Human Capital</h3>
       <p class="cap-subtitle">Strategic HR Architecture & Leadership</p>
 
       <p class="cap-description">
