--- a/index.html
+++ b/index.html
@@ -133,19 +133,19 @@
     <div class="capability-secondary">
 
       <div class="cap-secondary-item">
-        <h4>2.   Lakeside Health</h4>
+        <h4><span class="cap-number">02</span> Lakeside Health</h4>
         <p>Clinical wellbeing frameworks that strengthen workforce resilience and translate mental wellness into measurable organizational capability.</p>
         <a href="https://health.lakesideasia.com" target="_blank">Explore →</a>
       </div>
 
       <div class="cap-secondary-item">
-        <h4>3.   Lakeside Happiness</h4>
+        <h4><span class="cap-number">03</span> Lakeside Happiness</h4>
         <p>Advanced behavioral diagnostics uncover engagement risks and cultural friction — delivering precise leadership insights.</p>
         <a href="https://happiness.lakesideasia.com" target="_blank">Explore →</a>
       </div>
 
       <div class="cap-secondary-item">
-        <h4>4.   Lakeside BreathEasier</h4>
+        <h4><span class="cap-number">04</span> Lakeside BreathEasier</h4>
         <p>Cognitive environment optimization that enhances focus, clarity, and performance across high-functioning teams.</p>
         <a href="https://breatheeasier.lakesideasia.com" target="_blank">Explore →</a>
       </div>
