--- a/index.html
+++ b/index.html
@@ -194,6 +194,117 @@
   </div>
 </section>
 
+
+
+<!-- ================= New Eco-system section (v.2)================= -->
+
+ <section class="hr-infrastructure">
+  <div class="container">
+    <div class="chain-narrative">
+      <h2 class="narrative-heading">Engineering Human Capital Infrastructure for Scalable Growth</h2>
+      <p class="punchy-subline"> We integrate strategic HR consulting, evidence-based mental wellness, and optimized workplace environments into one intelligent system — enabling measurable performance and sustainable growth as organizations scale. </p>
+      
+      <div class="logic-chain">
+        <div class="chain-item">
+          <span class="chain-icon">🏗️</span>
+           <strong class="chain-title">Organization</strong>
+          <p class="chain-text">
+    Designing scalable HR architectures that eliminate structural bottlenecks and unlock growth.
+  </p>
+        </div>
+        <div class="chain-arrow">→</div>
+        <div class="chain-item">
+          <span class="chain-icon">🧠</span>
+          <strong class="chain-title">People</strong>
+          <p class="chain-text"> Building workforce resilience through clinically grounded, data-driven mental wellbeing.</p>
+        </div>
+        <div class="chain-arrow">→</div>
+        <div class="chain-item">
+          <span class="chain-icon">🌬️</span>
+          <strong class="chain-title">Environment</strong>
+          <p class="chain-text">  Optimizing workplace conditions to enhance focus, cognitive performance, and long-term productivity.</p>
+        </div>
+      </div>
+    </div>
+
+
+    <section class="lakeside-architecture">
+  <div class="container">
+
+    <!-- Section Header -->
+    <div class="architecture-header">
+      <h2>LAKESIDE HUMAN CAPITAL</h2>
+      <p class="architecture-subtitle">Integrated Performance Architecture</p>
+
+      <p class="architecture-intro">
+        Most organizations optimize people in isolation. We design performance as an integrated operating system.
+        We align leadership architecture, psychological resilience, behavioral intelligence, and environmental design into one scalable framework.
+      </p>
+    </div>
+
+    <!-- Connector Line -->
+    <div class="architecture-line">
+      <span>INTEGRATED PERFORMANCE ARCHITECTURE</span>
+    </div>
+
+    <!-- 4 Pillars -->
+    <div class="architecture-grid">
+
+      <!-- Pillar 1 -->
+      <div class="pillar">
+        <p class="pillar-category">STRUCTURE & GOVERNANCE</p>
+        <h3>Fractional CHRO Leadership</h3>
+        <p>
+          We design scalable HR architecture and leadership systems that transform fragmented operations into performance infrastructure.
+        </p>
+        <p class="pillar-outcome">
+          Outcome: Organizational clarity, accountability, and strategic alignment.
+        </p>
+      </div>
+
+      <!-- Pillar 2 -->
+      <div class="pillar">
+        <p class="pillar-category">PSYCHOLOGICAL PERFORMANCE</p>
+        <h3>Lakeside Health</h3>
+        <p>
+          We integrate clinical mental resilience frameworks into workforce strategy — turning well-being into a measurable performance driver.
+        </p>
+        <p class="pillar-outcome">
+          Outcome: Reduced cognitive fatigue. Increased leadership stability.
+        </p>
+      </div>
+
+      <!-- Pillar 3 -->
+      <div class="pillar">
+        <p class="pillar-category">CULTURE INTELLIGENCE</p>
+        <h3>Lakeside Happiness</h3>
+        <p>
+          We decode behavioral risk, engagement gaps, and structural friction using applied behavioral intelligence systems.
+        </p>
+        <p class="pillar-outcome">
+          Outcome: Early risk detection. Sustainable cultural strength.
+        </p>
+      </div>
+
+      <!-- Pillar 4 -->
+      <div class="pillar">
+        <p class="pillar-category">ENVIRONMENTAL PERFORMANCE</p>
+        <h3>Lakeside BreathEasier</h3>
+        <p>
+          We engineer performance-focused work environments that optimize cognitive clarity, focus, and sustained output.
+        </p>
+        <p class="pillar-outcome">
+          Outcome: Enhanced executive function at scale.
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
+  
+
   
 <!------------ Growth Dilemma  -------------->
 
