--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
     </div>
 
     <!-- 4 Pillars -->
+    <div class="architecture-connector"></div>
     <div class="architecture-grid">
 
       <!-- Pillar 1 -->
