--- a/index.html
+++ b/index.html
@@ -266,7 +266,9 @@
       <!-- Pillar 2 -->
       <div class="pillar">
         <p class="pillar-category">PSYCHOLOGICAL PERFORMANCE</p>
-        <h3>Lakeside Health</h3>
+        <h3>
+  Lakeside <br> Health
+</h3>
         <p>
           We integrate clinical mental resilience frameworks into workforce strategy — turning well-being into a measurable performance driver.
         </p>
@@ -277,8 +279,12 @@
 
       <!-- Pillar 3 -->
       <div class="pillar">
-        <p class="pillar-category">CULTURE INTELLIGENCE</p>
-        <h3>Lakeside Happiness</h3>
+        <p class="pillar-category">
+  CULTURE <br> INTELLIGENCE
+</p>
+        <h3>
+  Lakeside <br> Happiness
+</h3>
         <p>
           We decode behavioral risk, engagement gaps, and structural friction using applied behavioral intelligence systems.
         </p>
@@ -290,7 +296,9 @@
       <!-- Pillar 4 -->
       <div class="pillar">
         <p class="pillar-category">ENVIRONMENTAL PERFORMANCE</p>
-        <h3>Lakeside BreathEasier</h3>
+        <h3>
+  Lakeside <br> BreathEasier
+</h3>
         <p>
           We engineer performance-focused work environments that optimize cognitive clarity, focus, and sustained output.
         </p>
