--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       <!-- Pillar 1 -->
       <div class="pillar">
         <p class="pillar-category">STRUCTURE & GOVERNANCE</p>
-        <h3>Fractional CHRO Leadership</h3>
+        <h3>  Fractional CHRO <br> Leadership </h3>
         <p>
           We design scalable HR architecture and leadership systems that transform fragmented operations into performance infrastructure.
         </p>
