--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
       <!-- Pillar 1 -->
       <div class="pillar">
-        <p class="pillar-category">STRUCTURE & GOVERNANCE</p>
+        <p class="pillar-category">STRUCTURE & <br> GOVERNANCE</p>
         <h3>  Fractional CHRO <br> Leadership </h3>
         <p>
           We design scalable HR architecture and leadership systems that transform fragmented operations into performance infrastructure.
