--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           We design scalable HR architecture and leadership systems that transform fragmented operations into performance infrastructure.
         </p>
         <p class="pillar-outcome">
-          Outcome: Organizational clarity, accountability, and strategic alignment.
+          <span class="outcome-label">Outcome:</span>  Organizational clarity, accountability, and strategic alignment.
         </p>
       </div>
 
@@ -273,7 +273,7 @@
           We integrate clinical mental resilience frameworks into workforce strategy — turning well-being into a measurable performance driver.
         </p>
         <p class="pillar-outcome">
-          Outcome: Reduced cognitive fatigue. Increased leadership stability.
+          <span class="outcome-label">Outcome:</span>  Reduced cognitive fatigue. Increased leadership stability.
         </p>
       </div>
 
@@ -289,7 +289,7 @@
           We decode behavioral risk, engagement gaps, and structural friction using applied behavioral intelligence systems.
         </p>
         <p class="pillar-outcome">
-          Outcome: Early risk detection. Sustainable cultural strength.
+          <span class="outcome-label">Outcome:</span>  Early risk detection. Sustainable cultural strength.
         </p>
       </div>
 
@@ -303,7 +303,7 @@
           We engineer performance-focused work environments that optimize cognitive clarity, focus, and sustained output.
         </p>
         <p class="pillar-outcome">
-          Outcome: Enhanced executive function at scale.
+          <span class="outcome-label">Outcome:</span>  Enhanced executive function at scale.
         </p>
       </div>
 
