--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
   Lakeside <br> Health
 </h3>
         <p>
-          We integrate clinical mental resilience frameworks into workforce strategy — turning well-being into a measurable performance driver.
+          Psychological strain, decision fatigue, and sustained stress directly impact productivity, retention, and leadership effectiveness. Lakeside Health integrates clinical rigor into workforce strategy — transforming mental well-being into measurable organizational strength.
         </p>
         <p class="pillar-outcome">
           <span class="outcome-label">Outcome:</span>  Reduced cognitive fatigue. Increased leadership stability.
