--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
   Lakeside <br> Happiness
 </h3>
         <p>
-          We decode behavioral risk, engagement gaps, and structural friction using applied behavioral intelligence systems.
+          Engagement gaps, leadership misalignment, and silent attrition rarely appear suddenly — they accumulate structurally. Our behavioral intelligence surfaces hidden friction points and equips leaders with data-driven cultural insight before performance declines.
         </p>
         <p class="pillar-outcome">
           <span class="outcome-label">Outcome:</span>  Early risk detection. Sustainable cultural strength.
