--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
   Lakeside <br> BreathEasier
 </h3>
         <p>
-          We engineer performance-focused work environments that optimize cognitive clarity, focus, and sustained output.
+          Air quality, environmental stressors, and workspace design directly influence cognitive clarity, focus, and executive function. Lakeside BreathEasier engineers performance-oriented environments that protect sustained cognitive output at scale.
         </p>
         <p class="pillar-outcome">
           <span class="outcome-label">Outcome:</span>  Enhanced executive function at scale.
