--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
   Lakeside <br> Happiness
 </h3>
         <p>
-          Engagement gaps, leadership misalignment, and silent attrition rarely appear suddenly — they accumulate structurally. Our behavioral intelligence surfaces hidden friction points and equips leaders with data-driven cultural insight before performance declines.
+          Engagement gaps, leadership misalignment, and silent attrition rarely appear suddenly — they accumulate structurally. Our behavioral intelligence surfaces hidden friction points and equips leaders with data-driven cultural insight before measurable performance declines.
         </p>
         <p class="pillar-outcome">
           <span class="outcome-label">Outcome:</span>  Early risk detection. Sustainable cultural strength.
@@ -300,7 +300,7 @@
   Lakeside <br> BreathEasier
 </h3>
         <p>
-          Air quality, environmental stressors, and workspace design directly influence cognitive clarity, focus, and executive function. Lakeside BreathEasier engineers performance-oriented environments that protect sustained cognitive output at scale.
+          Air quality, environmental stressors, and workspace design directly influence cognitive clarity, focus, and executive function. Lakeside BreathEasier engineers performance-oriented environments that protect and enhance sustained cognitive output at scale.
         </p>
         <p class="pillar-outcome">
           <span class="outcome-label">Outcome:</span>  Enhanced executive function at scale.
